--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,10 @@
-<h1>Lists#index</h1>
-<p>Your lists</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.chiswickcinema.co.uk/wp-content/uploads/2021/05/Untitled-design-22.jpg);">
+  <div class="container">
+    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a>
+  </div>
+</div>
 <ul>
     <% @lists.each do |list| %>
       <li><%= link_to list.name, list_path(list) %></li>
