--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.chiswickcinema.co.uk/wp-content/uploads/2021/05/Untitled-design-22.jpg);">
   <div class="container">
-    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <h1>Make your <strong>watchlist</strong>!</h1>
+    <p>Make a new list and start making bookmarks!</p>
     <a class="btn btn-flat" href="#">Apply now</a>
   </div>
 </div>
