--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,5 +8,7 @@
 <ul>
     <% @lists.each do |list| %>
       <li><%= link_to list.name, list_path(list) %></li>
+      <%= cl_image_tag('xxxxmguevflt2ctpgqpy',
+      width: 400, height: 300, crop: :fill) %>
     <% end %>
   </ul>
